// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`snippet: #0 format[babel]} 1`] = `
"Classes may not have a field named 'constructor'. (2:3)
  1 | class Foo {
> 2 |   constructor
    |   ^
  3 | }
Cause: Classes may not have a field named 'constructor'. (2:2)"
`;

exports[`snippet: #0 format[babel]} 2`] = `
"Classes can't have a field named 'constructor' (2:3)
  1 | class Foo {
> 2 |   constructor
    |   ^
  3 | }
Cause: Classes can't have a field named 'constructor' (2:2)"
`;

exports[`snippet: #0 format[babel]} 3`] = `
"Classes can't have a field named 'constructor' (2:3)
  1 | class Foo {
> 2 |   constructor
    |   ^
  3 | }
Cause: Classes can't have a field named 'constructor'"
`;

exports[`snippet: #0 format[babel]} 4`] = `
"Classes may not have a field called constructor (3:1)
  1 | class Foo {
  2 |   constructor
> 3 | }
    | ^
Cause: [3:0-3:1]: Classes may not have a field called constructor"
`;

exports[`snippet: #0 format[babel]} 5`] = `
"'(' expected. (3:1)
  1 | class Foo {
  2 |   constructor
> 3 | }
    | ^
Cause: '(' expected."
`;

exports[`snippet: #0 format[babel]} 6`] = `
"Classes may not have a field named 'constructor'. (2:3)
  1 | class Foo {
> 2 |   constructor
    |   ^
  3 | }
Cause: Classes may not have a field named 'constructor'. (2:2)"
`;

exports[`snippet: #0 format[babel]} 7`] = `
"Expected \`(\` but found \`}\` (3:1)
  1 | class Foo {
  2 |   constructor
> 3 | }
    | ^"
`;

exports[`snippet: #0 format[babel]} 8`] = `
"Expected \`(\` but found \`}\` (3:1)
  1 | class Foo {
  2 |   constructor
> 3 | }
    | ^"
`;

exports[`snippet: #0 format[babel]} 9`] = `
"Classes may not have fields named \`constructor\`. (2:3)
  1 | class Foo {
> 2 |   constructor
    |   ^^^^^^^^^^^
  3 | }"
`;

exports[`snippet: #0 format[babel]} 10`] = `
"invalid class property name (2:2)
  1 | class Foo {
> 2 |   constructor
    |  ^
  3 | }
Cause: invalid class property name (2:2)
  constructor
  ^~~~~~~~~~~"
`;

exports[`snippet: #0 format[typescript]} 1`] = `
"'(' expected. (3:1)
  1 | abstract class Foo {
  2 |   constructor
> 3 | }
    | ^
Cause: '(' expected."
`;

exports[`snippet: #0 format[typescript]} 2`] = `
"Classes may not have a field named 'constructor'. (2:3)
  1 | abstract class Foo {
> 2 |   constructor
    |   ^
  3 | }
Cause: Classes may not have a field named 'constructor'. (2:2)"
`;

exports[`snippet: #0 format[typescript]} 3`] = `
"Expected \`(\` but found \`}\` (3:1)
  1 | abstract class Foo {
  2 |   constructor
> 3 | }
    | ^"
`;

exports[`snippet: #1 format[babel]} 1`] = `
"Classes may not have a field named 'constructor'. (2:3)
  1 | class Foo {
> 2 |   'constructor'
    |   ^
  3 | }
Cause: Classes may not have a field named 'constructor'. (2:2)"
`;

exports[`snippet: #1 format[babel]} 2`] = `
"Classes can't have a field named 'constructor' (2:3)
  1 | class Foo {
> 2 |   'constructor'
    |   ^
  3 | }
Cause: Classes can't have a field named 'constructor' (2:2)"
`;

exports[`snippet: #1 format[babel]} 3`] = `
"Classes can't have a field named 'constructor' (2:3)
  1 | class Foo {
> 2 |   'constructor'
    |   ^
  3 | }
Cause: Classes can't have a field named 'constructor'"
`;

exports[`snippet: #1 format[babel]} 4`] = `
"Classes may not have a field called constructor (3:1)
  1 | class Foo {
  2 |   'constructor'
> 3 | }
    | ^
Cause: [3:0-3:1]: Classes may not have a field called constructor"
`;

exports[`snippet: #1 format[babel]} 5`] = `
"Classes may not have a field named 'constructor'. (2:3)
  1 | class Foo {
> 2 |   'constructor'
    |   ^^^^^^^^^^^^^
  3 | }
Cause: Classes may not have a field named 'constructor'."
`;

exports[`snippet: #1 format[babel]} 6`] = `
"Classes may not have a field named 'constructor'. (2:3)
  1 | class Foo {
> 2 |   'constructor'
    |   ^
  3 | }
Cause: Classes may not have a field named 'constructor'. (2:2)"
`;

exports[`snippet: #1 format[babel]} 7`] = `
"Classes can't have a field named 'constructor' (2:3)
  1 | class Foo {
> 2 |   'constructor'
    |   ^^^^^^^^^^^^^
  3 | }"
`;

exports[`snippet: #1 format[babel]} 8`] = `
"Classes can't have a field named 'constructor' (2:3)
  1 | class Foo {
> 2 |   'constructor'
    |   ^^^^^^^^^^^^^
  3 | }"
`;

exports[`snippet: #1 format[babel]} 9`] = `
"Classes may not have fields named \`constructor\`. (2:3)
  1 | class Foo {
> 2 |   'constructor'
    |   ^^^^^^^^^^^^^
  3 | }"
`;

exports[`snippet: #1 format[babel]} 10`] = `
"invalid class property name (2:2)
  1 | class Foo {
> 2 |   'constructor'
    |  ^
  3 | }
Cause: invalid class property name (2:2)
  'constructor'
  ^~~~~~~~~~~~~"
`;

exports[`snippet: #1 format[typescript]} 1`] = `
"Classes may not have a field named 'constructor'. (2:3)
  1 | abstract class Foo {
> 2 |   'constructor'
    |   ^^^^^^^^^^^^^
  3 | }
Cause: Classes may not have a field named 'constructor'."
`;

exports[`snippet: #1 format[typescript]} 2`] = `
"Classes may not have a field named 'constructor'. (2:3)
  1 | abstract class Foo {
> 2 |   'constructor'
    |   ^
  3 | }
Cause: Classes may not have a field named 'constructor'. (2:2)"
`;

exports[`snippet: #1 format[typescript]} 3`] = `
"Classes can't have a field named 'constructor' (2:3)
  1 | abstract class Foo {
> 2 |   'constructor'
    |   ^^^^^^^^^^^^^
  3 | }"
`;

exports[`snippet: #2 format[babel]} 1`] = `
"Classes may not have a field named 'constructor'. (2:3)
  1 | class Foo {
> 2 |   'constructor'
    |   ^
  3 | }
Cause: Classes may not have a field named 'constructor'. (2:2)"
`;

exports[`snippet: #2 format[babel]} 2`] = `
"Classes can't have a field named 'constructor' (2:3)
  1 | class Foo {
> 2 |   'constructor'
    |   ^
  3 | }
Cause: Classes can't have a field named 'constructor' (2:2)"
`;

exports[`snippet: #2 format[babel]} 3`] = `
"Classes can't have a field named 'constructor' (2:3)
  1 | class Foo {
> 2 |   'constructor'
    |   ^
  3 | }
Cause: Classes can't have a field named 'constructor'"
`;

exports[`snippet: #2 format[babel]} 4`] = `
"Classes may not have a field called constructor (3:1)
  1 | class Foo {
  2 |   'constructor'
> 3 | }
    | ^
Cause: [3:0-3:1]: Classes may not have a field called constructor"
`;

exports[`snippet: #2 format[babel]} 5`] = `
"Classes may not have a field named 'constructor'. (2:3)
  1 | class Foo {
> 2 |   'constructor'
    |   ^^^^^^^^^^^^^
  3 | }
Cause: Classes may not have a field named 'constructor'."
`;

exports[`snippet: #2 format[babel]} 6`] = `
"Classes may not have a field named 'constructor'. (2:3)
  1 | class Foo {
> 2 |   'constructor'
    |   ^
  3 | }
Cause: Classes may not have a field named 'constructor'. (2:2)"
`;

exports[`snippet: #2 format[babel]} 7`] = `
"Classes can't have a field named 'constructor' (2:3)
  1 | class Foo {
> 2 |   'constructor'
    |   ^^^^^^^^^^^^^
  3 | }"
`;

exports[`snippet: #2 format[babel]} 8`] = `
"Classes can't have a field named 'constructor' (2:3)
  1 | class Foo {
> 2 |   'constructor'
    |   ^^^^^^^^^^^^^
  3 | }"
`;

exports[`snippet: #2 format[babel]} 9`] = `
"Classes may not have fields named \`constructor\`. (2:3)
  1 | class Foo {
> 2 |   'constructor'
    |   ^^^^^^^^^^^^^
  3 | }"
`;

exports[`snippet: #2 format[babel]} 10`] = `
"invalid class property name (2:2)
  1 | class Foo {
> 2 |   'constructor'
    |  ^
  3 | }
Cause: invalid class property name (2:2)
  'constructor'
  ^~~~~~~~~~~~~"
`;

exports[`snippet: #2 format[typescript]} 1`] = `
"Classes may not have a field named 'constructor'. (2:3)
  1 | abstract class Foo {
> 2 |   'constructor'
    |   ^^^^^^^^^^^^^
  3 | }
Cause: Classes may not have a field named 'constructor'."
`;

exports[`snippet: #2 format[typescript]} 2`] = `
"Classes may not have a field named 'constructor'. (2:3)
  1 | abstract class Foo {
> 2 |   'constructor'
    |   ^
  3 | }
Cause: Classes may not have a field named 'constructor'. (2:2)"
`;

exports[`snippet: #2 format[typescript]} 3`] = `
"Classes can't have a field named 'constructor' (2:3)
  1 | abstract class Foo {
> 2 |   'constructor'
    |   ^^^^^^^^^^^^^
  3 | }"
`;

exports[`snippet: #3 format[babel]} 1`] = `
"Classes may not have a field named 'constructor'. (2:12)
  1 | class Foo {
> 2 |   accessor 'constructor'
    |            ^
  3 | }
Cause: Classes may not have a field named 'constructor'. (2:11)"
`;

exports[`snippet: #3 format[babel]} 2`] = `
"Unexpected token (2:12)
  1 | class Foo {
> 2 |   accessor 'constructor'
    |            ^
  3 | }
Cause: Unexpected token (2:11)"
`;

exports[`snippet: #3 format[babel]} 3`] = `
"Unexpected token 'constructor' (2:12)
  1 | class Foo {
> 2 |   accessor 'constructor'
    |            ^
  3 | }
Cause: Unexpected token 'constructor'"
`;

exports[`snippet: #3 format[babel]} 4`] = `
"Classes may not have a field called constructor (3:1)
  1 | class Foo {
  2 |   accessor 'constructor'
> 3 | }
    | ^
Cause: [3:0-3:1]: Classes may not have a field called constructor"
`;

exports[`snippet: #3 format[babel]} 5`] = `
"Classes may not have a field named 'constructor'. (2:12)
  1 | class Foo {
> 2 |   accessor 'constructor'
    |            ^^^^^^^^^^^^^
  3 | }
Cause: Classes may not have a field named 'constructor'."
`;

exports[`snippet: #3 format[babel]} 6`] = `
"Classes may not have a field named 'constructor'. (2:12)
  1 | class Foo {
> 2 |   accessor 'constructor'
    |            ^
  3 | }
Cause: Classes may not have a field named 'constructor'. (2:11)"
`;

exports[`snippet: #3 format[babel]} 7`] = `
"Classes may not have a field named 'constructor' (2:12)
  1 | class Foo {
> 2 |   accessor 'constructor'
    |            ^^^^^^^^^^^^^
  3 | }"
`;

exports[`snippet: #3 format[babel]} 8`] = `
"Classes may not have a field named 'constructor' (2:12)
  1 | class Foo {
> 2 |   accessor 'constructor'
    |            ^^^^^^^^^^^^^
  3 | }"
`;

exports[`snippet: #3 format[babel]} 9`] = `
"Unexpected string, expected the token \`(\` (2:12)
  1 | class Foo {
> 2 |   accessor 'constructor'
    |            ^^^^^^^^^^^^^
  3 | }"
`;

exports[`snippet: #3 format[babel]} 10`] = `
"';' expected after class property (2:11)
  1 | class Foo {
> 2 |   accessor 'constructor'
    |           ^
  3 | }
Cause: ';' expected after class property (2:11)
  accessor 'constructor'
  ~~~~~~~~~^"
`;

exports[`snippet: #3 format[typescript]} 1`] = `
"Classes may not have a field named 'constructor'. (2:12)
  1 | abstract class Foo {
> 2 |   accessor 'constructor'
    |            ^^^^^^^^^^^^^
  3 | }
Cause: Classes may not have a field named 'constructor'."
`;

exports[`snippet: #3 format[typescript]} 2`] = `
"Classes may not have a field named 'constructor'. (2:12)
  1 | abstract class Foo {
> 2 |   accessor 'constructor'
    |            ^
  3 | }
Cause: Classes may not have a field named 'constructor'. (2:11)"
`;

exports[`snippet: #3 format[typescript]} 3`] = `
"Classes may not have a field named 'constructor' (2:12)
  1 | abstract class Foo {
> 2 |   accessor 'constructor'
    |            ^^^^^^^^^^^^^
  3 | }"
`;

exports[`snippet: #4 format[babel]} 1`] = `
"Classes may not have a field named 'constructor'. (2:12)
  1 | class Foo {
> 2 |   accessor 'constructor'
    |            ^
  3 | }
Cause: Classes may not have a field named 'constructor'. (2:11)"
`;

exports[`snippet: #4 format[babel]} 2`] = `
"Unexpected token (2:12)
  1 | class Foo {
> 2 |   accessor 'constructor'
    |            ^
  3 | }
Cause: Unexpected token (2:11)"
`;

exports[`snippet: #4 format[babel]} 3`] = `
"Unexpected token 'constructor' (2:12)
  1 | class Foo {
> 2 |   accessor 'constructor'
    |            ^
  3 | }
Cause: Unexpected token 'constructor'"
`;

exports[`snippet: #4 format[babel]} 4`] = `
"Classes may not have a field called constructor (3:1)
  1 | class Foo {
  2 |   accessor 'constructor'
> 3 | }
    | ^
Cause: [3:0-3:1]: Classes may not have a field called constructor"
`;

exports[`snippet: #4 format[babel]} 5`] = `
"Classes may not have a field named 'constructor'. (2:12)
  1 | class Foo {
> 2 |   accessor 'constructor'
    |            ^^^^^^^^^^^^^
  3 | }
Cause: Classes may not have a field named 'constructor'."
`;

exports[`snippet: #4 format[babel]} 6`] = `
"Classes may not have a field named 'constructor'. (2:12)
  1 | class Foo {
> 2 |   accessor 'constructor'
    |            ^
  3 | }
Cause: Classes may not have a field named 'constructor'. (2:11)"
`;

exports[`snippet: #4 format[babel]} 7`] = `
"Classes may not have a field named 'constructor' (2:12)
  1 | class Foo {
> 2 |   accessor 'constructor'
    |            ^^^^^^^^^^^^^
  3 | }"
`;

exports[`snippet: #4 format[babel]} 8`] = `
"Classes may not have a field named 'constructor' (2:12)
  1 | class Foo {
> 2 |   accessor 'constructor'
    |            ^^^^^^^^^^^^^
  3 | }"
`;

exports[`snippet: #4 format[babel]} 9`] = `
"Unexpected string, expected the token \`(\` (2:12)
  1 | class Foo {
> 2 |   accessor 'constructor'
    |            ^^^^^^^^^^^^^
  3 | }"
`;

exports[`snippet: #4 format[babel]} 10`] = `
"';' expected after class property (2:11)
  1 | class Foo {
> 2 |   accessor 'constructor'
    |           ^
  3 | }
Cause: ';' expected after class property (2:11)
  accessor 'constructor'
  ~~~~~~~~~^"
`;

exports[`snippet: #4 format[typescript]} 1`] = `
"Classes may not have a field named 'constructor'. (2:12)
  1 | abstract class Foo {
> 2 |   accessor 'constructor'
    |            ^^^^^^^^^^^^^
  3 | }
Cause: Classes may not have a field named 'constructor'."
`;

exports[`snippet: #4 format[typescript]} 2`] = `
"Classes may not have a field named 'constructor'. (2:12)
  1 | abstract class Foo {
> 2 |   accessor 'constructor'
    |            ^
  3 | }
Cause: Classes may not have a field named 'constructor'. (2:11)"
`;

exports[`snippet: #4 format[typescript]} 3`] = `
"Classes may not have a field named 'constructor' (2:12)
  1 | abstract class Foo {
> 2 |   accessor 'constructor'
    |            ^^^^^^^^^^^^^
  3 | }"
`;

exports[`snippet: #5 format[babel]} 1`] = `
"Classes may not have a field named 'constructor'. (2:12)
  1 | class Foo {
> 2 |   accessor constructor
    |            ^
  3 | }
Cause: Classes may not have a field named 'constructor'. (2:11)"
`;

exports[`snippet: #5 format[babel]} 2`] = `
"Unexpected token (2:12)
  1 | class Foo {
> 2 |   accessor constructor
    |            ^
  3 | }
Cause: Unexpected token (2:11)"
`;

exports[`snippet: #5 format[babel]} 3`] = `
"Unexpected token constructor (2:12)
  1 | class Foo {
> 2 |   accessor constructor
    |            ^
  3 | }
Cause: Unexpected token constructor"
`;

exports[`snippet: #5 format[babel]} 4`] = `
"Classes may not have a field called constructor (3:1)
  1 | class Foo {
  2 |   accessor constructor
> 3 | }
    | ^
Cause: [3:0-3:1]: Classes may not have a field called constructor"
`;

exports[`snippet: #5 format[babel]} 5`] = `
"'(' expected. (3:1)
  1 | class Foo {
  2 |   accessor constructor
> 3 | }
    | ^
Cause: '(' expected."
`;

exports[`snippet: #5 format[babel]} 6`] = `
"Classes may not have a field named 'constructor'. (2:12)
  1 | class Foo {
> 2 |   accessor constructor
    |            ^
  3 | }
Cause: Classes may not have a field named 'constructor'. (2:11)"
`;

exports[`snippet: #5 format[babel]} 7`] = `
"Expected \`(\` but found \`}\` (3:1)
  1 | class Foo {
  2 |   accessor constructor
> 3 | }
    | ^"
`;

exports[`snippet: #5 format[babel]} 8`] = `
"Expected \`(\` but found \`}\` (3:1)
  1 | class Foo {
  2 |   accessor constructor
> 3 | }
    | ^"
`;

exports[`snippet: #5 format[babel]} 9`] = `
"Unexpected identifier, expected the token \`(\` (2:12)
  1 | class Foo {
> 2 |   accessor constructor
    |            ^^^^^^^^^^^
  3 | }"
`;

exports[`snippet: #5 format[babel]} 10`] = `
"';' expected after class property (2:11)
  1 | class Foo {
> 2 |   accessor constructor
    |           ^
  3 | }
Cause: ';' expected after class property (2:11)
  accessor constructor
  ~~~~~~~~~^"
`;

exports[`snippet: #5 format[typescript]} 1`] = `
"'(' expected. (3:1)
  1 | abstract class Foo {
  2 |   accessor constructor
> 3 | }
    | ^
Cause: '(' expected."
`;

exports[`snippet: #5 format[typescript]} 2`] = `
"Classes may not have a field named 'constructor'. (2:12)
  1 | abstract class Foo {
> 2 |   accessor constructor
    |            ^
  3 | }
Cause: Classes may not have a field named 'constructor'. (2:11)"
`;

exports[`snippet: #5 format[typescript]} 3`] = `
"Expected \`(\` but found \`}\` (3:1)
  1 | abstract class Foo {
  2 |   accessor constructor
> 3 | }
    | ^"
`;
